feat(server): get family and its members
